fix overflow

--- a/public/dark.css
+++ b/public/dark.css
@@ -1,4 +1,4 @@
-body, .side {
+body {
   background-color: #262626;
   color: #ddd;
 }
